--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ body{
     padding: 0;
     margin: 0;
 }
+.player{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
 .cube {
     position: absolute;
     top: 80vh;
@@ -69,11 +74,7 @@ border-color: #fff;
     top: 85vh;
 }
 
-.player{
-    position: absolute;
-    top: 0;
-    right: 0;
-}
+
 .container__btn{
     position: absolute;
     top: 50%;
@@ -153,6 +154,16 @@ border-color: #fff;
     -webkit-transform: rotateX(-90deg);
     -moz-transform: rotateX(-90deg);
     transform: rotateX(-90deg);
+  }
+  .github__link{
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  .github__link:hover{
+    color: #940518;
   }
 /*Animate background */
 @keyframes Gradient{
